--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <div></div>
-
-
+    <div id="default">Squashy armchairs dirt on your nose brass scales crush the Sopophorous bean with flat side of silver dagger, releasese juice beter than cuttin gl. Full moon WHomping WIllow three turns should do it lemon drops. Lcoomotor tunks owl treats that will be 50 points, Mr. Potter. Witch Weekly he will rise again and he will come for us, headmaster Erumpent horn. Fenrir Grayback horseless carriages 'zis is a chance man would die for!</div>
+    <div id="margins">Squashy armchairs dirt on your nose brass scales crush the Sopophorous bean with flat side of silver dagger, releasese juice beter than cuttin gl. Full moon WHomping WIllow three turns should do it lemon drops. Lcoomotor tunks owl treats that will be 50 points, Mr. Potter. Witch Weekly he will rise again and he will come for us, headmaster Erumpent horn. Fenrir Grayback horseless carriages 'zis is a chance man would die for!</div>
+    <div id="padding">Squashy armchairs dirt on your nose brass scales crush the Sopophorous bean with flat side of silver dagger, releasese juice beter than cuttin gl. Full moon WHomping WIllow three turns should do it lemon drops. Lcoomotor tunks owl treats that will be 50 points, Mr. Potter. Witch Weekly he will rise again and he will come for us, headmaster Erumpent horn. Fenrir Grayback horseless carriages 'zis is a chance man would die for!</div>
   </body>
 </html>
